frame/support/test/tests/construct_runtime_ui/undefined_validate_unsigned_part.stderr
error: `Pallet` does not have #[pallet::validate_unsigned] defined, perhaps you should remove `ValidateUnsigned` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_validate_unsigned_check::is_validate_unsigned_part_defined` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no variant or associated item named `Pallet` found for enum `RuntimeCall` in the current scope
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:56:3
   |
49 | construct_runtime! {
   | ------------------ variant or associated item `Pallet` not found here
...
56 |         Pallet: pallet::{Pallet, ValidateUnsigned},
   |         ^^^^^^ variant or associated item not found in `RuntimeCall`

error[E0599]: no function or associated item named `pre_dispatch` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       ------------------------ function or associated item `pre_dispatch` not found for this
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ function or associated item not found in `pallet::Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `pre_dispatch`, perhaps you need to implement one of them:
           candidate #1: `SignedExtension`
           candidate #2: `ValidateUnsigned`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no function or associated item named `validate_unsigned` found for struct `pallet::Pallet` in the current scope
  --> tests/construct_runtime_ui/undefined_validate_unsigned_part.rs:49:1
   |
11 |       pub struct Pallet<T>(_);
   |       ------------------------ function or associated item `validate_unsigned` not found for this
...
49 | / construct_runtime! {
50 | |     pub enum Runtime where
51 | |         Block = Block,
52 | |         NodeBlock = Block,
...  |
57 | |     }
58 | | }
   | |_^ function or associated item not found in `pallet::Pallet<Runtime>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `validate_unsigned`, perhaps you need to implement one of them:
           candidate #1: `SignedExtension`
           candidate #2: `ValidateUnsigned`
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
